fix: event title font size on smaller screens

--- a/src/style/components/Event.css
+++ b/src/style/components/Event.css
@@ -64,6 +64,10 @@
 
 
 @media  screen and (max-width : 400px) {
+    .eventTitle {
+        font-size: 18px;
+    }
+
     .eventBanner {
         width: 184px;
         height: 210px;  
